# fdtest_assuan

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  fdtest_client.c  fdtest_client_inquire.c  fdtest_client_out.c  fdtest_server.c  fdtest_server_inquire.c  fdtest_server_out.c
src/.deps/: fdtest_client.Po  fdtest_client_inquire.Po  fdtest_client_out.Po  fdtest_server.Po  fdtest_server_inquire.Po  fdtest_server_out.Po
